2009-01-08  Sven Herzberg  <sven@imendio.com>

	Compile against a vanilla GTK+

	* tests/double-free.c: GTK+ 2.14 doesn't allow including
	<gtk/gtktestutils.h>; Maemo-GTK doesn't include it in <gtk/gtk.h>; so
	we need this version check here

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Updated to the refactored paths.

	* demos/run-demo: replaced src by engine, as this is where the engine
	is built now

2008-09-08  Sven Herzberg  <sven@imendio.com>

	Created cache_node_ref()

	* server/cache-node.c (cache_node_ref): added new function
	* server/cache-node.h: added new prototype
	* server/sapwood-server.c (process_buffer): use the cache_node_ref()
	function

2008-09-08  Sven Herzberg  <sven@imendio.com>

	Moved memory management for CacheNode into separate files; now we have
	two well-specified locations left for allocation and free of CacheNode

	* server/Makefile.am: build the new files, too
	* server/cache-node.c (cache_node_free), (cache_node_new): added new
	functions
	* server/cache-node.h: have the structure definition here; added
	declarations of the new functions
	* server/sapwood-server.c (process_buffer),
	(cleanup_pixmap_destroy): replace the code to create/free an object
	with proper function calls

2008-11-27  Sven Herzberg  <sven@imendio.com>

	Properly follow common memory management logic

	* engine/sapwood-style.c (enum_value_to_string): don't access stuff
	after freeing it; now we only leak memory (and only with debugging
	enabled), at least we don't access invalid memory anymore

2008-11-27  Sven Herzberg  <sven@imendio.com>

	Added some debug output; patch from Daniel Bormann

	* engine/sapwood-style.c (enum_value_to_string), (draw_hline),
	(draw_vline), (draw_shadow), (draw_arrow), (draw_diamond),
	(draw_string), (draw_box), (draw_flat_box), (draw_check),
	(draw_option), (draw_tab), (draw_shadow_gap), (draw_box_gap),
	(draw_expander), (draw_extension), (draw_focus), (draw_slider),
	(draw_handle), (draw_layout): added debug output
